--- a/assets/style.css
+++ b/assets/style.css
@@ -1,38 +1,38 @@
 html {
-    background: linear-gradient(177.52deg, #4574E3 2.11%, #154580 81.34%);
-    background-repeat: no-repeat;
-    height: 100%;
+  background: linear-gradient(177.52deg, #916bbf 2.11%, #3d2c8d 81.34%);
+  background-repeat: no-repeat;
+  height: 100%;
 }
 
 body {
-    font-family: 'Montserrat', 'sans-serif', 'Mansalva', cursive;
+  font-family: "Roboto", sans-serif;
 }
 
-h2, footer {
-    font-family: 'Mansalva';
+h2,
+footer {
+  font-family: "Roboto";
 }
 
 button {
-    border: none;
+  border: none;
 }
 
 .itens-comprados {
-text-decoration: line-through;
+  text-decoration: line-through;
 }
 
 .borda-lista {
-    border-bottom: dotted 2px blue;
+  border-bottom: dotted 2px #1c0c5b;
 }
 
 input:disabled {
-    border: none;
-    background: none;
-    color: black;
+  border: none;
+  background: none;
+  color: black;
 }
 
 input {
-    border: none;
-    background: none;
-    color: black;
+  border: none;
+  background: none;
+  color: black;
 }
-
